# advent_of_code

./: .copier-answers.yml  .cruft.json  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  release.Dockerfile
docs/source/: architecture.md  conf.py  features.md  index.md  index.rst  readme.md
features/: runner.feature  validating_solutions.feature
src/advent_of_code/: __init__.py  aoc_runner.py  cli.py  input_conversion.py  solutions_lookup.py
src/advent_of_code/aoc2021/: __init__.py  day0.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
src/advent_of_code/aoc2022/: __init__.py  day1.py  day10.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/advent_of_code/aoc2023/: __init__.py  day1.py  day2.py
src/advent_of_code/aoc2024/: __init__.py  day1.py  day2.py  day3.py  day4.py  day5.py
src/advent_of_code_2021/: aoc_runner.py  input_conversion.py  input_list.py  solutions_lookup.py
src/advent_of_code_2021/days/: __init__.py  day0.py  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py
tests/: __init__.py  test_advent_of_code.py  test_aoc.py  test_cli_runner.py
tests/data/: README.md  output02_2.txt
tests/data/y2021/: output02_1.txt  output06_2.txt  output07_2.txt
tests/data/y2024/: output03_1.txt  output03_2.txt
